--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,7 @@
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>hospital</finalName>
     </build>
 
 </project>
